[tool.poetry]
name = "pull-request-comments"
version = "0.1.0"
description = ""
authors = ["Cyril Obrecht"]
readme = "README.md"
packages = [{include = "pull_request_comments"}]

[tool.poetry.dependencies]
python = "^3.10"
pygithub = "^1.57"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pydocstyle = "^6.1.1"

